@@ -1,7 +1,7 @@
 #!/bin/bash
 
-# deps: bash, coreutils, apt, dialog, grep
-# Last update 2025/05/14 by pavroo
+# deps: bash, coreutils, apt, dialog, grep, sudo
+# Last update 2025/05/20 by pavroo
 # it uses APT
 
 DIALOG="`which dialog`"
@@ -31,6 +31,7 @@ Simulate "Simulate a package installation only" \
 Install "Install a package" \
 ReInstall "Reinstall a package" \
 Remove "Uninstall a package" \
+Kernel "Install or remove Linux kernels" \
 Fix "Fix broken packages" \
 Clean "Clean the APT cache" \
 Exit "Exit" 2>/tmp/choice.$$
@@ -41,6 +42,7 @@ NEWACTION=`cat /tmp/choice.$$`
 if [ "$?" = "0" ]; then
 	NEWACTION=`cat /tmp/choice.$$`
 else
+	clear
 	exit 0
 fi
 rm /tmp/choice.$$
@@ -69,6 +71,8 @@ elif [ "$NEWACTION" = "ReInstall" ]; then
 	reinstallmenu
 elif [ "$NEWACTION" = "Remove" ]; then
 	removemenu
+elif [ "$NEWACTION" = "Kernel" ]; then
+	kernelmenu
 elif [ "$NEWACTION" = "Fix" ]; then
 	fixmenu
 elif [ "$NEWACTION" = "Clean" ]; then
@@ -258,6 +262,12 @@ clear
 sudo apt purge $PACKAGE
 echo 'Done, press <ENTER> to Exit...' && read
 mainmenu
+}
+
+# kernels
+kernelmenu () {
+clear
+/usr/lib/sparky-package-tool/kernel
 }
 
 # fix
