@@ -1,7 +1,7 @@
 #!/bin/bash
 
-# deps: bash, coreutils, apt, dialog, grep, nala
-# Last update 2025/05/16 by pavroo
+# deps: bash, coreutils, apt, dialog, grep, sudo, nala
+# Last update 2025/05/20 by pavroo
 # it uses Nala
 
 # nala opts: install, remove, autoremove, autopurge, purge, update, upgrade, full-upgrade, autoremove, clean, show, search, list, fetch, --help
@@ -23,9 +23,9 @@ if [ "$CHECKNALA" = "" ]; then
 	echo ""
 	echo "  No Nala found."
 	echo "  Install nala package and try again."
-	echo "  Press <ENTER> to back to the Main window..." && read
+	echo "  Press <ENTER> to exit..." && read
 	echo ""
-	spt
+	exit 0
 fi
 
 #$TEXT"Choose your action:"
@@ -41,6 +41,7 @@ Info "Print info about a package" \
 Search "Search of available packages" \
 Install "Install a package" \
 Remove "Uninstall a package" \
+Kernel "Install or remove Linux kernels" \
 Clean "Clean the APT cache" \
 Exit "Exit" 2>/tmp/choice.$$
 
@@ -56,6 +57,7 @@ NEWACTION=`cat /tmp/choice.$$`
 if [ "$?" = "0" ]; then
 	NEWACTION=`cat /tmp/choice.$$`
 else
+	clear
 	exit 0
 fi
 rm /tmp/choice.$$
@@ -84,6 +86,8 @@ elif [ "$NEWACTION" = "ReInstall" ]; then
 	reinstallmenu
 elif [ "$NEWACTION" = "Remove" ]; then
 	removemenu
+elif [ "$NEWACTION" = "Kernel" ]; then
+	kernelmenu
 elif [ "$NEWACTION" = "Fix" ]; then
 	fixmenu
 elif [ "$NEWACTION" = "Clean" ]; then
@@ -270,6 +274,12 @@ clear
 sudo nala purge $PACKAGE
 echo 'Done, press <ENTER> to Exit...' && read
 mainmenu
+}
+
+# kernels
+kernelmenu () {
+clear
+/usr/lib/sparky-package-tool/kernel
 }
 
 ## fix
