@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20250520 (2025-05-20)
+-------------------------------------------------------------------------------
+  * Added kernel remover
+
+-------------------------------------------------------------------------------
   Version 20250516 (2025-05-16)
 -------------------------------------------------------------------------------
   * Initial release
